# androidllmnoteapp

./: .gitignore  AGENTS.md  README.md  VULKAN_WSL_GUIDE.md  adb_status.txt  build_log.txt  build_vulkan.sh  gradle.properties  publish.sh  release_vulkan.sh  s22_crash_debug.txt  s22_errors_only.txt  s22_llama_logs.txt  samsung-SM-S901E-Android-16_2026-01-24_140000.logcat  samsung-SM-S901E-Android-16_2026-01-24_141018.logcat  settings.gradle.kts  verify_vulkan_build.sh
app/: .project  build.gradle.kts  keystore.properties.example  proguard-rules.pro
app/src/androidTest/java/com/synapsenotes/ai/core/ai/: HardwareCapabilityInstrumentedTest.kt
app/src/androidTest/java/com/synapsenotes/ai/core/database/: NoteDaoTest.kt
app/src/androidTest/java/com/synapsenotes/ai/feature/chat/: ChatUiTest.kt
app/src/androidTest/java/com/synapsenotes/ai/tests/: VulkanBuildTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AGENTS.md  CMakeLists.txt  README.md  host-toolchain.cmake  native-lib.cpp
app/src/main/java/com/example/llmnotes/: LlmNotesApp.kt  MainActivity.kt  MainViewModel.kt
app/src/main/java/com/example/llmnotes/core/ai/: DefaultHardwareCapabilityProvider.kt  HardwareCapabilityProvider.kt  HardwareInfo.kt  LlamaContext.kt  LlmCallback.kt  LlmContext.kt  LlmEngine.kt  ModelManager.kt
app/src/main/java/com/example/llmnotes/core/database/: AppDatabase.kt  ChatDao.kt  ChatMessageEntity.kt  ChatSessionEntity.kt  Converters.kt  NoteDao.kt  NoteEntity.kt
app/src/main/java/com/example/llmnotes/core/di/: AiModule.kt  DatabaseModule.kt  GoogleModule.kt  RepositoryModule.kt
app/src/main/java/com/example/llmnotes/core/network/: DownloadWorker.kt
app/src/main/java/com/example/llmnotes/core/preferences/: AppPreferences.kt
app/src/main/java/com/example/llmnotes/core/util/: VectorMath.kt
app/src/main/java/com/example/llmnotes/domain/model/: ChatMessage.kt  Note.kt
app/src/main/java/com/example/llmnotes/domain/repository/: ChatRepository.kt  DriveRepository.kt  NoteRepository.kt
app/src/main/java/com/example/llmnotes/domain/usecase/: DeleteNoteUseCase.kt  GetNotesUseCase.kt  SaveNoteUseCase.kt  VectorSearchUseCase.kt
app/src/main/java/com/example/llmnotes/feature/chat/: ChatScreen.kt  ChatViewModel.kt  SheetComponents.kt
app/src/main/java/com/example/llmnotes/feature/files/: FilesScreen.kt  FilesViewModel.kt
app/src/main/java/com/example/llmnotes/feature/notes/: AiToolsBottomSheet.kt  NoteDetailScreen.kt  (+3 more)
app/src/main/java/com/synapsenotes/ai/: LlmNotesApp.kt  MainActivity.kt  MainViewModel.kt
app/src/main/java/com/synapsenotes/ai/core/: AGENTS.md
app/src/main/java/com/synapsenotes/ai/feature/: AGENTS.md
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/test/java/android/util/: Log.java
app/src/test/java/com/synapsenotes/ai/test/: CoroutineTestExtension.kt
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/opencl_backend_20260126/: plan.md  spec.md
conductor/tracks/fix_gdrive_auth_20260128/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/opencl_backend_20260126/: index.md  metadata.json  plan.md
docs/: AGENTS.md  ANDROID_PORT_PLAN.md  ANDROID_PORT_TASKS.md  DESIGNER_BRIEF.md
docs/android_tasks/: 01-initialize-android-project.md  02-configure-dependencies.md  03-setup-architecture-structure.md  04-define-note-entity.md  05-create-note-dao.md  06-setup-room-database.md  07-note-repository.md  08-note-usecases.md  09-llama-jni-setup.md  10-model-manager.md  11-llm-engine.md  12-vector-search.md  13-theme-setup.md  14-onboarding-screen.md  15-settings-model-manager.md  16-note-list-screen.md  17-note-detail-screen.md  18-chat-screen.md  19-rag-pipeline.md  20-testing.md  21-performance-tuning.md  22-release-prep.md
docs/release/: PRIVACY_POLICY.md  play_store_compliance_checklist.md  publish_polish_plan.md  release_audit_notes.md  release_readiness_report.md
docs/release/store_listing/: ASSETS_GUIDE.md  full_description.txt  short_description.txt
docs/wsl/: environment_setup.md  setup_guide.md  technical_implementation.md
docs/wsl/scripts/: README.md  build_vulkan.sh  setup_android_sdk.sh
gradle/: libs.versions.toml
stitch_welcome_onboarding/app_settings_&_models/: code.html
stitch_welcome_onboarding/chat_with_notes_ai/: code.html
stitch_welcome_onboarding/dark_mode_ai_chat/: code.html
stitch_welcome_onboarding/dark_mode_editor/: code.html
stitch_welcome_onboarding/edit_note_with_ai/: code.html
stitch_welcome_onboarding/empty_notes_state_(dark)/: code.html
stitch_welcome_onboarding/my_notes_list/: code.html
stitch_welcome_onboarding/welcome_onboarding/: code.html
(+77 files in other folders)
